Constraint Layout + Validaciones

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
     <string name="app_name">SendMeal</string>
     <string name="registro_titulo">Registrar Usuario</string>
-    <string name="registro_nombre">Nombre</string>
-    <string name="registro_password">Password</string>
-    <string name="registro_password2">Repetir password</string>
-    <string name="registro_email">E-mail</string>
+    <string name="registro_nombre">Nombre:</string>
+    <string name="registro_password">Password:</string>
+    <string name="registro_password2">Repetir password:</string>
+    <string name="registro_email">E-mail:</string>
     <string name="registro_tarjetaCredito">Tarjeta de Crédito</string>
     <string name="registro_credito">Crédito Inicial</string>
     <string name="registro_notificacionEmail">Notificar por e-mail</string>
     <string name="regsitro_vendedor">Es vendedor?</string>
-    <string name="registro_CtaAlias">Alias CBU</string>
-    <string name="registro_CtaCBU">CBU</string>
+    <string name="registro_CtaAlias">Alias CBU:</string>
+    <string name="registro_CtaCBU">CBU:</string>
     <string name="registro_tipoCuenta">Tipo de Cuenta</string>
     <string name="registro_numeroSeguridad">CCV</string>
     <string name="registro_numeroTarjeta">Número</string>
@@ -22,4 +22,6 @@
     <string name="button_registrar">Registrar</string>
     <string name="activarNotificaciones">Activado</string>
     <string name="desactivarNotificaciones">Desactivado</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="passwordError"></string>
 </resources>
