--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="registro_tipoCuenta">Tipo de Cuenta</string>
     <string name="registro_numeroSeguridad">CCV</string>
     <string name="registro_numeroTarjeta">Número</string>
-    <string name="registro_dateVencimiento">MM/AA</string>
+    <string name="registro_dateVencimientoMonth">MM</string>
+    <string name="registro_dateVencimientoYear">AA</string>
     <string name="cuentaBase">Base</string>
     <string name="cuentaPremium">Premium</string>
     <string name="cuentaFull">Full</string>
@@ -25,4 +26,5 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="passwordError"></string>
     <string name="textViewValorCredito">0</string>
+    <string name="textViewDateSeparador">/</string>
 </resources>
