Agregamos navigation bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,16 @@
     <string name="passwordError"></string>
     <string name="textViewValorCredito">0</string>
     <string name="textViewDateSeparador">/</string>
+    <string name="title_activity_home">Home</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_registrarme">Registrar usuario</string>
+    <string name="menu_crear_plato">Crear plato</string>
+    <string name="itemRegistrarme">Registrarme</string>
+    <string name="itemCrearPLato">Crear plato</string>
 </resources>
