Agregando el cambio de fragmento al presionar la notificacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="boton_editar_plato">Editar</string>
     <string name="boton_ofertar_plato">Oferta</string>
     <string name="boton_eliminar_plato">Eliminar</string>
+    <string name="channel_name">SendMealNotification</string>
+    <string name="channel_description">Este canal se ocupa de administrar las notificaciones de SendMeal</string>
 </resources>
