Seguir interfaz Crear Pedido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="itemCrearPedido">Crear Pedido</string>
     <string name="buttonCrearPedido">Crear Pedido</string>
     <string name="buttonEnviarPedido">Enviar Pedido</string>
+    <string name="agregarPlato">Agregar plato a mi pedido: </string>
+    <string name="buttonAgregarPlato">Agregar</string>
 </resources>
