Solucionar boton para agregar plato a mi pedido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,5 @@
     <string name="precioPlatoPedido">Precio</string>
     <string name="buttonPlusPlato">+</string>
     <string name="buttonMinusPlato">-</string>
-    <string name="buttonAgregarAMiPedido">Agregar a mi pedido</string>
+    <string name="buttonAgregarAMiPedido">Agregar plato a mi pedido</string>
 </resources>
