Agregado de ubicaciones en el mapa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,6 @@
     <string name="buttonPlusPlato">+</string>
     <string name="buttonMinusPlato">-</string>
     <string name="buttonAgregarAMiPedido">Agregar plato a mi pedido</string>
+
+    <string name="botonAgregarUbicacion">Agregar ubicacion</string>
 </resources>
