--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,8 +69,7 @@
     <string name="buttonAgregarAMiPedido">Agregar plato a mi pedido</string>
 
     <string name="buttonQuitarPlatoAMiPedido">Quitar plato del pedido</string>
-
-
     <string name="botonAgregarUbicacion">Agregar ubicacion</string>
+    <string name="misPedidos">Mis Pedidos</string>
 
 </resources>
